[project]
name = "hello-world"
version = "0.1.0"
description = ""
authors = [
    {name = "digiplugtech",email = "digiplugtech@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "keras (>=3.12.0,<4.0.0)",
    "openai (>=2.8.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
